--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="//cdn.bootcss.com/jquery/3.2.1/core.js"></script>
 </head>
 <body>
 
@@ -118,7 +119,7 @@
                 loadPageItem(LoadData.params);
             }
         });
-    
+
 
 </script>
 
